syntax = "proto3";

package metadoc.schema;

message Position {
    reserved 2;
    reserved 3;
    string filename = 1;
    int32 start_line = 4;
    int32 start_character = 5;
    int32 end_line = 6;
    int32 end_character = 7;
}

message SymbolIndex {
    string symbol = 1;
    Position definition = 2;
    reserved 3;
    map<string, Ranges> references = 4;
}

message Range {
    reserved 1;
    reserved 2;
    reserved 3;
    int32 start_line = 4;
    int32 start_character = 5;
    int32 end_line = 6;
    int32 end_character = 7;
}

message Ranges {
    repeated Range ranges = 1;
}

message Workspace {
    repeated string filenames = 1;
}
